--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import '~normalize.css';
 @import "./reset";
 
-@import '~element-plus/dist/index.css';
+//@import '~element-plus/dist/index.css';
+@import "element-plus";
